@@ -1,29 +1,20 @@
 package com.csse3200.game.components.combat;
 
-import com.csse3200.game.cards.CardService;
 import com.csse3200.game.cards.EffectType;
 import com.csse3200.game.cards.TargetType;
-import com.csse3200.game.cards.deck.BattleDeck;
-import com.csse3200.game.cards.effects.CardEffectResolutionService;
-import com.csse3200.game.cards.effects.CardEffectResolver;
-import com.csse3200.game.cards.effects.PlayerEffectState;
+import com.csse3200.game.cards.effects.*;
 import com.csse3200.game.cards.effects.ResolvedCardEffect;
-import com.csse3200.game.cards.effects.TurnEffectStore;
-import com.csse3200.game.cards.play.CardPlayFailureReason;
 import com.csse3200.game.cards.play.CardPlayRequest;
 import com.csse3200.game.cards.play.CardPlayResult;
 import com.csse3200.game.cards.play.CardPlayService;
-import com.csse3200.game.cards.play.DeckSnapshot;
-import com.csse3200.game.cards.runtime.CardInstance;
-import com.csse3200.game.cards.runtime.ResolvedCard;
 import com.csse3200.game.components.CombatStatsComponent;
 import com.csse3200.game.components.StatusEffect;
+import com.csse3200.game.components.cards.CardEffectHandler;
 import com.csse3200.game.components.enemy.EnemyBehaviourComponent;
 import com.csse3200.game.components.enemy.EnemyIntent;
 import com.csse3200.game.components.enemy.IntentEffectType;
 import com.csse3200.game.components.enemy.IntentType;
 import com.csse3200.game.components.player.EnergyComponent;
-import com.csse3200.game.components.player.PlayerIntent;
 import com.csse3200.game.entities.Entity;
 import com.csse3200.game.events.EventHandler;
 import com.csse3200.game.events.listeners.EventListener1;
@@ -32,7 +23,6 @@ import java.util.ArrayDeque;
 import java.util.Deque;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
 
 /**
  * The central controller of the current state of the battle loop. Controls what phase the battle is
@@ -40,67 +30,57 @@ import java.util.Optional;
  * This is functionally the Finite State Machine.
  */
 public class BattleController {
-  private BattlePhase currentPhase;
+  private final Entity player;
+
+  private final List<Entity> enemies;
   private int currentEnemyIndex;
   private EnemyIntent currentEnemyIntent;
-  private PlayerIntent currentPlayerIntent;
+
+  private BattlePhase currentPhase;
   private final BattleTransitions battleTransitions;
   private final EventHandler eventHandler;
   private final Deque<BattleEvent> eventQueue;
-  private final Entity player;
-  private final List<Entity> enemies;
+  private boolean processingEvents;
+
+  private final CardEffectHandler effectHandler;
+  private final CardPlayService cardPlayService;
+  private CardPlayRequest pendingCard;
+  private boolean lastCardPlaySucceeded;
+
+  /** Logging Strings & Error messages */
   private static final String PHASE_CHANGED_EVENT = "battlePhaseChanged";
+
   private static final String BATTLE_LOG_EVENT = "battleLog";
   private static final String BATTLE_ENDED_EVENT = "battleEnded";
   private static final String ENEMY_EFFECTS_EVENT = "enemyEffects";
   private static final String PLAYER_EFFECTS_EVENT = "playerEffects";
   private static final String HAND_CHANGED_EVENT = "handChanged";
   private static final String LISTENER_NOT_NULL = "Listener must not be null.";
-  private boolean pendingEvent;
-  private CardPlayRequest pendingCard;
-  private boolean lastCardPlaySucceeded;
-  private CardPlayService cardPlayService;
-
-  /** Team 5's card-effect resolver (Team 6 configs -> resolved effects); null without cards. */
-  private final CardEffectResolver effectResolver;
-
-  /** Team 6 card library, used to look up a played card's config; null without cards. */
-  private final CardService cardService;
-
-  /** Team 5's per-battle player effect state, carrying Strength between plays. */
-  private final PlayerEffectState playerEffectState;
-
-  /** Team 5-owned deck state; null when the loop runs without cards. */
-  private final BattleDeck battleDeck;
 
   public BattleController(Entity player, List<Entity> enemies) throws IllegalArgumentException {
-    this(player, enemies, null, null, null);
+    this(player, enemies, null, null);
+    this.currentPhase = BattlePhase.SETUP;
   }
 
   /**
    * @param player the player entity
    * @param enemies the enemies in the encounter
-   * @param effectResolver Team 5's card-effect resolver, or {@code null} to run without cards
-   * @param cardService Team 6's card library for config lookup, or {@code null} to run without
-   *     cards
-   * @param battleDeck the battle deck state, or {@code null} to run without cards
+   * @param cardPlayService coordinator of the card play
    */
   public BattleController(
       Entity player,
       List<Entity> enemies,
-      CardEffectResolver effectResolver,
-      CardService cardService,
-      BattleDeck battleDeck)
+      CardEffectHandler effectHandler,
+      CardPlayService cardPlayService)
       throws IllegalArgumentException {
 
-    this.effectResolver = effectResolver;
-    this.cardService = cardService;
-    this.playerEffectState = new PlayerEffectState();
-    this.battleDeck = battleDeck;
     this.player = player;
     if (player == null) {
       throw new IllegalArgumentException("Player cannot be null.");
     }
+
+    this.effectHandler = effectHandler;
+    this.cardPlayService = cardPlayService;
 
     // Guards against empty list or null enemies.
     this.enemies = enemies;
@@ -110,42 +90,32 @@ public class BattleController {
       throw new IllegalArgumentException("One or more enemies are null.");
     }
 
-    if (effectResolver != null
-        && cardService != null
-        && battleDeck != null
-        && playerEnergy() != null) {
-      this.cardPlayService =
-          new CardPlayService(
-              cardService,
-              new CardEffectResolutionService(
-                  effectResolver, playerEffectState, new TurnEffectStore()),
-              battleDeck,
-              playerEnergy());
-    }
     this.battleTransitions = new BattleTransitions();
     this.currentPhase = BattlePhase.SETUP;
     this.currentEnemyIndex = -1;
     this.currentEnemyIntent = null;
-    this.currentPlayerIntent = null;
     this.eventHandler = new EventHandler();
     this.eventQueue = new ArrayDeque<>();
   }
 
   /**
-   * Handles a single event atomically.
+   * Queues an event and processes queued events in order.
    *
-   * @param event The event within the Battle Loop to handle.
+   * <p>Events submitted during processing are queued until the current event finishes. If
+   * processing throws, remaining events are discarded; changes already made are not rolled back.
+   *
+   * @param event the battle event to handle
    */
   public void handle(BattleEvent event) {
     Objects.requireNonNull(event, "event cannot be null");
     this.eventQueue.addLast(event);
 
     // Guards against recursion impacting order of events.
-    if (this.pendingEvent) {
+    if (this.processingEvents) {
       return;
     }
-    // pendingEvent keeps events atomic.
-    this.pendingEvent = true;
+    // Prevents nested calls from processing the queue recursively
+    this.processingEvents = true;
     // Takes an event from the queue, attempts to process atomically
     try {
       while (!this.eventQueue.isEmpty()) {
@@ -157,7 +127,7 @@ public class BattleController {
       this.eventQueue.clear();
       throw e;
     } finally {
-      this.pendingEvent = false;
+      this.processingEvents = false;
     }
   }
 
@@ -199,11 +169,8 @@ public class BattleController {
         // Player States
       case PLAYER_START -> enterPlayerStart();
       case PLAYER_TURN -> enterPlayerTurn();
-      case PLAYER_ATTACK -> enterPlayerAttack();
-      case PLAYER_DEFEND -> enterPlayerDefend();
-      case PLAYER_OTHER -> enterPlayerOther();
+      case CARD_RESOLVING -> resolvePlayerCard();
       case PLAYER_END -> enterPlayerEnd();
-      case PLAYER_RESOLVED -> enterPlayerResolved();
 
         // Enemy States
       case ENEMY_TURN -> enterEnemyTurn();
@@ -232,25 +199,22 @@ public class BattleController {
     handle(BattleEvent.SETUP_COMPLETE);
   }
 
-  /** Player intends to attack the enemy on their turn */
-  public void selectAttack() {
-    this.currentPlayerIntent = PlayerIntent.ATTACK;
-  }
-
-  /** Player intends to defend themselves on their turn */
-  public void selectDefend() {
-    this.currentPlayerIntent = PlayerIntent.DEFEND;
-  }
-
-  /** Player intends to do other actions on their turn */
-  public void selectOther() {
-    this.currentPlayerIntent = PlayerIntent.OTHER;
+  /**
+   * Reports whether the player currently has the given status effect.
+   *
+   * <p>Read-only: exposes a query about the player rather than the player entity itself, so callers
+   * cannot mutate player state through this controller.
+   *
+   * @param effectType identifier of the status effect, as stored by CombatStatsComponent
+   * @return true if the player carries an active effect with this identifier
+   */
+  public boolean playerHasStatusEffect(String effectType) {
+    CombatStatsComponent stats = player.getComponent(CombatStatsComponent.class);
+    return stats != null && stats.hasStatusEffect(effectType);
   }
 
   /** Player decides to end their turn */
   public void endPlayerTurn() {
-    this.currentPlayerIntent = PlayerIntent.END_PLAYER_TURN;
-
     if (canHandle(BattleEvent.PLAYER_END_REQUESTED)) {
       handle(BattleEvent.PLAYER_END_REQUESTED);
     }
@@ -258,10 +222,10 @@ public class BattleController {
 
   /**
    * Resets the current battle to a completely new battle that has no previous player and enemy
-   * turns
+   * turns.
    */
   public void resetBattle() {
-    if (this.pendingEvent) {
+    if (this.processingEvents) {
       throw new IllegalStateException("There is an event in progress.");
     }
 
@@ -270,11 +234,9 @@ public class BattleController {
 
     // Normal housekeeping for resetting the state machine.
     this.eventQueue.clear();
-    this.setCurrentEnemyIndex(-1);
+    this.resetEnemyCursor();
     this.setEnemyIntent(null);
-    this.setPlayerIntent(null);
     this.setCurrentPhase(BattlePhase.SETUP);
-
     this.notifyPhaseChange(previousPhase, BattlePhase.SETUP);
   }
 
@@ -285,6 +247,25 @@ public class BattleController {
    */
   public BattlePhase getCurrentPhase() {
     return this.currentPhase;
+  }
+
+  /**
+   * Returns whether the battle is in the player input phase.
+   *
+   * @return true only during {@link BattlePhase#PLAYER_TURN}; false during card resolution, setup,
+   *     enemy turns, and all other phases
+   */
+  public boolean isPlayerTurn() {
+    return this.currentPhase == BattlePhase.PLAYER_TURN;
+  }
+
+  /**
+   * Returns the current targeted enemy.
+   *
+   * @return An int representing the targeted entity within the array.
+   */
+  public int getCurrentEnemyIndex() {
+    return this.currentEnemyIndex;
   }
 
   /**
@@ -349,7 +330,7 @@ public class BattleController {
    *
    * @param listener receives the updated hand
    */
-  public void addHandChangedListener(EventListener1<List<CardInstance>> listener) {
+  public void addHandChangedListener(EventListener1<List<String>> listener) {
     Objects.requireNonNull(listener, LISTENER_NOT_NULL);
     eventHandler.addListener(HAND_CHANGED_EVENT, listener);
   }
@@ -366,29 +347,6 @@ public class BattleController {
   }
 
   /**
-   * Returns the current targeted enemy.
-   *
-   * @return An int representing the targeted entity within the array.
-   */
-  public int getCurrentEnemyIndex() {
-    return this.currentEnemyIndex;
-  }
-
-  /**
-   * Reports whether the player currently has the given status effect.
-   *
-   * <p>Read-only: exposes a query about the player rather than the player entity itself, so callers
-   * cannot mutate player state through this controller.
-   *
-   * @param effectType identifier of the status effect, as stored by CombatStatsComponent
-   * @return true if the player carries an active effect with this identifier
-   */
-  public boolean playerHasStatusEffect(String effectType) {
-    CombatStatsComponent stats = player.getComponent(CombatStatsComponent.class);
-    return stats != null && stats.hasStatusEffect(effectType);
-  }
-
-  /**
    * Convenience function for returning if a given event can be handled within a state.
    *
    * @param event The event to check.
@@ -398,7 +356,7 @@ public class BattleController {
     return this.battleTransitions.getNextPhase(this.currentPhase, event) != null;
   }
 
-  /*------------------------- Setters ----------------------------*/
+  /*----------------------------- Setters --------------------------------*/
 
   private void setCurrentPhase(BattlePhase nextPhase) {
     this.currentPhase = nextPhase;
@@ -412,10 +370,6 @@ public class BattleController {
     this.currentEnemyIntent = intent;
   }
 
-  private void setPlayerIntent(PlayerIntent intent) {
-    this.currentPlayerIntent = intent;
-  }
-
   /*------------------------- Helper functions ----------------------------*/
 
   /**
@@ -423,7 +377,7 @@ public class BattleController {
    *
    * @return True if a new target has been chosen. False if all enemies are dead.
    */
-  private boolean targetNextEnemy() {
+  private boolean advanceToNextLivingEnemy() {
     // Starts from index after currently targeted enemy.
     for (int i = this.currentEnemyIndex + 1; i < this.enemies.size(); i++) {
       Entity currentEnemy = this.enemies.get(i);
@@ -466,7 +420,7 @@ public class BattleController {
    *
    * @return the current active enemy instance in the battle
    */
-  private Entity getEnemy() {
+  private Entity getActiveEnemy() {
     if (this.currentEnemyIndex < 0 || this.currentEnemyIndex >= enemies.size()) {
       throw new IllegalStateException("No active enemy.");
     }
@@ -474,23 +428,12 @@ public class BattleController {
   }
 
   /**
-   * Returns if the enemy is alive. NOTE: I couldn't find an existing helper/API for this, but in
-   * the future this should probably be put in another module.
-   *
-   * @param enemy The enemy to be checked.
-   * @return True if the enemy is alive, False if not.
-   */
-  private boolean isEnemyAlive(Entity enemy) {
-    CombatStatsComponent stats = enemy.getComponent(CombatStatsComponent.class);
-    return !stats.isDead();
-  }
-
-  /**
-   * Checks the outcome of the battle.
+   * Checks whether the combat has ended, and queues the corresponding outcome event. If both sides
+   * are defeated, the player defeat takes precedence.
    *
    * @return True if the battle is over, False if it isn't.
    */
-  private boolean isBattleOver() {
+  private boolean queueBattleOutcomeIfOver() {
     CombatStatsComponent playerStats = this.player.getComponent(CombatStatsComponent.class);
     boolean allEnemiesDead = this.enemies.stream().noneMatch(this::isEnemyAlive);
 
@@ -506,8 +449,8 @@ public class BattleController {
     return false;
   }
 
-  /** Cleans up the variables after a round or the battle sequence is done. */
-  private void cleanUp() {
+  /** Resets the enemy cursor to the default 'no target' value */
+  private void resetEnemyCursor() {
     this.setCurrentEnemyIndex(-1);
   }
 
@@ -515,58 +458,50 @@ public class BattleController {
     return this.pendingCard;
   }
 
-  public boolean submitCardPlayRequest(CardPlayRequest cardPlayRequest, PlayerIntent playerIntent) {
+  /** Submits a card during the player's turn, rejecting submissions while an action is running. */
+  public boolean submitCardPlayRequest(CardPlayRequest cardPlayRequest) {
     Objects.requireNonNull(cardPlayRequest, "cardPlayRequest cannot be null.");
-    Objects.requireNonNull(playerIntent, "playerIntent cannot be null.");
-    BattleEvent event =
-        switch (playerIntent) {
-          case ATTACK -> BattleEvent.PLAYER_ATTACK_SELECTED;
-          case DEFEND -> BattleEvent.PLAYER_DEFEND_SELECTED;
-          case OTHER -> BattleEvent.PLAYER_OTHER_SELECTED;
-          case END_PLAYER_TURN ->
-              throw new IllegalArgumentException("End turn is not a card action");
-        };
-    if (!canHandle(event)) {
+
+    if (processingEvents || !canHandle(BattleEvent.CARD_PLAY_REQUESTED)) {
       return false;
     }
     lastCardPlaySucceeded = false;
     pendingCard = cardPlayRequest;
-    currentPlayerIntent = playerIntent;
-    handle(event);
+    try {
+      handle(BattleEvent.CARD_PLAY_REQUESTED);
+    } finally {
+      pendingCard = null;
+    }
     return lastCardPlaySucceeded;
   }
 
-  /*------------------------- Possible Action Branches ----------------------------*/
-
-  private void enterSetup() {
-    // Coordinate battle setup.
-    this.setCurrentEnemyIndex(0);
-    handle(BattleEvent.SETUP_COMPLETE);
-  }
-
-  private void enterRevealIntents() {
-    // reset enemy index to reduce the chance of buggy behaviour with dead enemies
-    this.setCurrentEnemyIndex(-1); // TODO: Probably a better way to do this.
-
-    // Rolls intent for alive each enemy.
-    for (Entity enemy : this.enemies) {
-      if (this.isEnemyAlive(enemy)) {
-        EnemyBehaviourComponent behaviour = enemy.getComponent(EnemyBehaviourComponent.class);
-        // Enemies live on their own entity and cannot reach the player, so hand the player's stats
-        // over each round. Refreshing here keeps the AI reading the player's current condition.
-        behaviour.setPlayerStats(player.getComponent(CombatStatsComponent.class));
-        behaviour.rollIntent();
-      }
+  /**
+   * Prints a summary string for a game event that occurs. For use in printing actions within a
+   * battle sequence.
+   *
+   * @param request The card that is being played.
+   * @param result The result of the card being played.
+   * @return A string summarising the card being played and the resulting actions.
+   */
+  private String summarise(CardPlayRequest request, CardPlayResult result) {
+    StringBuilder summary = new StringBuilder("You played ").append(request.cardId());
+    for (ResolvedCardEffect effect : result.enemyEffects()) {
+      summary
+          .append(" - ")
+          .append(effect.type())
+          .append(' ')
+          .append(effect.value())
+          .append(" to enemy");
     }
-
-    // If an enemy is alive set it to the current intent
-    if (this.targetNextEnemy()) {
-      this.setEnemyIntent(resolveEnemyIntent(this.getEnemy()));
-    } else {
-      // If no enemies are alive - remove stale intent
-      this.setEnemyIntent(null);
+    for (ResolvedCardEffect effect : result.playerEffects()) {
+      summary
+          .append(" - ")
+          .append(effect.type())
+          .append(' ')
+          .append(effect.value())
+          .append(" to you");
     }
-    handle(BattleEvent.INTENTS_REVEALED);
+    return summary.append('.').toString();
   }
 
   /**
@@ -590,17 +525,15 @@ public class BattleController {
     return EnemyIntent.attack(attack);
   }
 
-  private void enterPlayerStart() {
-    if (this.isBattleOver()) {
-      return;
-    }
-    // Start-of-turn operations: refill energy for the new player turn.
-    EnergyComponent energy = playerEnergy();
-    if (energy != null) {
-      energy.onTurnStart();
-    }
-    applyHealingAtTurnStart();
-    handle(BattleEvent.PLAYER_TURN_STARTED);
+  /**
+   * Returns if the enemy is alive.
+   *
+   * @param enemy The enemy to be checked.
+   * @return True if the enemy is alive, False if not.
+   */
+  public boolean isEnemyAlive(Entity enemy) {
+    CombatStatsComponent stats = enemy.getComponent(CombatStatsComponent.class);
+    return !stats.isDead();
   }
 
   /** Applies and counts down timed HEAL once per player turn, starting on the next turn. */
@@ -618,7 +551,7 @@ public class BattleController {
       return;
     }
     int missingHealth = Math.max(0, stats.getMaxHealth() - stats.getHealth());
-    stats.heal(Math.min(Math.max(0, healing.getValue()), missingHealth));
+    stats.heal(Math.clamp(healing.getValue(), 0, missingHealth));
     if (healing.tickAndCheckExpired()) {
       stats.removeStatusEffect(EffectType.HEAL.name());
     }
@@ -628,34 +561,15 @@ public class BattleController {
     return this.player.getComponent(EnergyComponent.class);
   }
 
-  private void enterPlayerTurn() {
-    // Enable or accept player actions.
-    if (this.isBattleOver()) {
-      return;
-    }
-    // wait for ui to submit card or end tyurn
-  }
-
   private void finishPlayerCardAction() {
     if (lastCardPlaySucceeded && pendingCard != null) {
-      eventHandler.trigger("cardPlayed", pendingCard.instanceId(), pendingCard.target().targetId());
+      eventHandler.trigger("cardPlayed", pendingCard.cardId(), pendingCard.target().targetId());
     }
 
     pendingCard = null;
-    currentPlayerIntent = null;
-    handle(BattleEvent.PLAYER_ACTION_RESOLVED);
-  }
-
-  private void enterPlayerAttack() {
-    resolvePlayerCard();
-  }
-
-  private void enterPlayerDefend() {
-    resolvePlayerCard();
-  }
-
-  private void enterPlayerOther() {
-    resolvePlayerCard();
+    if (!queueBattleOutcomeIfOver()) {
+      handle(BattleEvent.CARD_RESOLVED);
+    }
   }
 
   /**
@@ -671,11 +585,28 @@ public class BattleController {
       return;
     }
 
-    CardPlayResult result = playCardThroughCardSystem(request);
+    // Some controller unit tests intentionally run without the card system.
+    if (cardPlayService == null) {
+      lastCardPlaySucceeded = true;
+      finishPlayerCardAction();
+      return;
+    }
+
+    if (effectHandler != null
+        && request.target().type() != TargetType.SELF
+        && effectHandler.getLivingEnemyTargets(request, enemies).isEmpty()) {
+      lastCardPlaySucceeded = false;
+      narrate("Couldn't play " + request.cardId() + ": target is no longer available.");
+      finishPlayerCardAction();
+      return;
+    }
+
+    CardPlayResult result = cardPlayService.playCard(request);
+
     if (result == null) {
       // Card system not wired in (e.g. unit tests without a resolution service).
       lastCardPlaySucceeded = true;
-      narrate("You played " + request.instanceId() + ".");
+      narrate("You played " + request.cardId() + ".");
       finishPlayerCardAction();
       return;
     }
@@ -683,7 +614,7 @@ public class BattleController {
     if (!result.success()) {
       // No effects produced; the card stays in hand and the player keeps their turn.
       lastCardPlaySucceeded = false;
-      narrate("Couldn't play " + request.instanceId() + ": " + result.failureReason());
+      narrate("Couldn't play " + request.cardId() + ": " + result.failureReason());
       finishPlayerCardAction();
       return;
     }
@@ -695,60 +626,26 @@ public class BattleController {
   }
 
   /**
-   * Validates the selected enemy, then delegates instance lookup, resolved cost/effects and discard
-   * to the shared CardPlayService. Draws a replacement only after successful play.
+   * Skips the enemy turn if the enemy is found to be dead.
    *
-   * @return the result, or {@code null} when no card system is wired in
+   * @param enemy The enemy to check.
+   * @return True if the turn is going to be skipped. False if not.
    */
-  private CardPlayResult playCardThroughCardSystem(CardPlayRequest request) {
-    if (effectResolver == null || cardService == null || battleDeck == null) {
-      return null;
+  private boolean skipEnemyTurnIfDead(Entity enemy) {
+    if (!isEnemyAlive(enemy)) {
+      handle(BattleEvent.ENEMY_TURN_SKIPPED);
+      return true;
     }
-
-    if (cardPlayService == null) {
-      return CardPlayResult.failure(
-          request.instanceId(),
-          null,
-          request.target(),
-          0,
-          CardPlayFailureReason.NOT_ENOUGH_ENERGY,
-          DeckSnapshot.from(battleDeck));
-    }
-    Optional<ResolvedCard> selected = cardPlayService.resolveInHand(request.instanceId());
-    if (selected.isPresent()
-        && request.target().type() != TargetType.SELF
-        && livingEnemyTargets(request).isEmpty()) {
-      ResolvedCard card = selected.get();
-      return CardPlayResult.failure(
-          card.instanceId(),
-          card.cardId(),
-          request.target(),
-          card.cost(),
-          CardPlayFailureReason.INVALID_TARGET,
-          DeckSnapshot.from(battleDeck));
-    }
-    CardPlayResult result = cardPlayService.playCard(request);
-    if (!result.success()) return result;
-    // Preserve the existing draw-on-success battle rule, not on rejected attempts.
-    battleDeck.drawOne();
-    return CardPlayResult.success(
-        result.instanceId(),
-        result.cardId(),
-        result.target(),
-        result.energyCost(),
-        result.effectResolution(),
-        DeckSnapshot.from(battleDeck));
-  }
-
-  /** Resolved values of an exact copy in hand, for UI event routing and previews. */
-  public Optional<ResolvedCard> resolveCardInHand(String instanceId) {
-    return cardPlayService == null ? Optional.empty() : cardPlayService.resolveInHand(instanceId);
+    return false;
   }
 
   /**
    * Passes the resolved effects to the other systems ({@code enemyEffects} to Team 1, {@code
    * playerEffects} to Team 7) and also applies them directly so the encounter resolves even before
    * those systems subscribe.
+   *
+   * @param request the card the player intends to play
+   * @param result the result of the card play attempt
    */
   private void dispatchCardEffects(CardPlayRequest request, CardPlayResult result) {
     List<ResolvedCardEffect> enemyEffects = result.enemyEffects();
@@ -757,109 +654,97 @@ public class BattleController {
     eventHandler.trigger(ENEMY_EFFECTS_EVENT, enemyEffects);
     eventHandler.trigger(PLAYER_EFFECTS_EVENT, playerEffects);
 
-    applyEnemyEffects(livingEnemyTargets(request), enemyEffects);
-    applyPlayerEffects(playerEffects);
+    effectHandler.applyEnemyEffects(
+        effectHandler.getLivingEnemyTargets(request, this.enemies), enemyEffects);
+    effectHandler.applyPlayerEffects(playerEffects, this.player);
 
-    // The played card has left the hand (see playCardThroughCardSystem) — tell the UI to refresh.
+    // The played card has left the hand — tell the UI to refresh.
     eventHandler.trigger(HAND_CHANGED_EVENT, result.updatedHand());
   }
 
-  /** Uses the entity ID emitted by the drop target, never the enemy's shared definition ID. */
-  private List<Entity> livingEnemyTargets(CardPlayRequest request) {
-    if (request.target().type() == TargetType.SELF) return List.of();
-    return enemies.stream()
-        .filter(this::isEnemyAlive)
-        .filter(
-            enemy ->
-                request.target().type() == TargetType.ALL_ENEMIES
-                    || Integer.toString(enemy.getId()).equals(request.target().targetId()))
-        .toList();
+  /*--------------------------- Possible Action Branches ----------------------------*/
+
+  private void enterSetup() {
+    // Coordinate battle setup.
+    this.setCurrentEnemyIndex(0);
+    handle(BattleEvent.SETUP_COMPLETE);
   }
 
-  private void applyEnemyEffects(List<Entity> targets, List<ResolvedCardEffect> effects) {
-    for (Entity enemy : targets) {
-      CombatStatsComponent stats = enemy.getComponent(CombatStatsComponent.class);
-      if (stats == null) {
-        continue;
-      }
-      for (ResolvedCardEffect effect : effects) {
-        switch (effect.type()) {
-          case DAMAGE -> stats.takeDamage(effect.value());
-          case PIERCE -> stats.takePiercingDamage(effect.value());
-          case POISON ->
-              stats.applyStatusEffect(
-                  new StatusEffect("poison", effect.value(), effect.duration()));
-          case VULNERABLE ->
-              stats.applyStatusEffect(
-                  new StatusEffect("vulnerable", effect.value(), effect.duration()));
-          case SUNDER -> stats.setArmor(stats.getArmor() - effect.value());
-          default -> {
-            // Other effect types are not handled by this legacy battle path.
-          }
-        }
+  private void enterRevealIntents() {
+    // reset enemy index to reduce the chance of buggy behaviour with dead enemies
+    this.resetEnemyCursor();
+
+    // Rolls intent for alive each enemy.
+    for (Entity enemy : this.enemies) {
+      if (this.isEnemyAlive(enemy)) {
+        EnemyBehaviourComponent behaviour = enemy.getComponent(EnemyBehaviourComponent.class);
+        // Enemies live on their own entity and cannot reach the player, so hand the player's stats
+        // over each round. Refreshing here keeps the AI reading the player's current condition.
+        behaviour.setPlayerStats(player.getComponent(CombatStatsComponent.class));
+        behaviour.rollIntent();
       }
     }
+
+    // If an enemy is alive set it to the current intent
+    if (this.advanceToNextLivingEnemy()) {
+      this.setEnemyIntent(resolveEnemyIntent(this.getActiveEnemy()));
+    } else {
+      // If no enemies are alive - remove stale intent
+      this.setEnemyIntent(null);
+    }
+    handle(BattleEvent.INTENTS_REVEALED);
   }
 
-  private void applyPlayerEffects(List<ResolvedCardEffect> effects) {
-    CombatStatsComponent stats = this.player.getComponent(CombatStatsComponent.class);
-    if (stats == null) {
+  /** Enters the 'player start' state of the FSM */
+  private void enterPlayerStart() {
+    if (this.queueBattleOutcomeIfOver()) {
       return;
     }
-    for (ResolvedCardEffect effect : effects) {
-      switch (effect.type()) {
-        case BLOCK -> stats.addArmor(effect.value());
-        case HEAL -> {
-          if (effect.duration() > 0) {
-            stats.applyStatusEffect(effect.type().name(), effect.value(), effect.duration());
-          } else {
-            stats.heal(effect.value());
-          }
-        }
-        case ENERGY_GAIN -> {
-          EnergyComponent energy = playerEnergy();
-          if (energy != null) {
-            energy.restoreEnergy(effect.value());
-          }
-        }
-        case CLEANSE -> stats.clearNegativeStatusEffects();
-        case FORTIFY -> stats.addArmor(effect.value());
-        default -> {
-          // STRENGTH is already folded into the resolver's running player state.
-        }
-      }
+    // Start-of-turn operations: refill energy for the new player turn.
+    EnergyComponent energy = playerEnergy();
+    if (energy != null) {
+      energy.onTurnStart();
     }
+    applyHealingAtTurnStart();
+    retrieveCooledDownCards();
+    handle(BattleEvent.PLAYER_TURN_STARTED);
   }
 
-  private String summarise(CardPlayRequest request, CardPlayResult result) {
-    StringBuilder summary =
-        new StringBuilder("You played ")
-            .append(result.cardId())
-            .append(" [")
-            .append(request.instanceId())
-            .append("]");
-    for (ResolvedCardEffect effect : result.enemyEffects()) {
-      summary
-          .append(" - ")
-          .append(effect.type())
-          .append(' ')
-          .append(effect.value())
-          .append(" to enemy");
-    }
-    for (ResolvedCardEffect effect : result.playerEffects()) {
-      summary
-          .append(" - ")
-          .append(effect.type())
-          .append(' ')
-          .append(effect.value())
-          .append(" to you");
-    }
-    return summary.append('.').toString();
-  }
-
-  public void enterPlayerEnd() {
-    if (this.isBattleOver()) {
+  /**
+   * Ticks card cooldowns for the new player round, retrieving any discarded card whose cooldown has
+   * elapsed straight back into the hand, and tells the UI to refresh if any were retrieved.
+   */
+  private void retrieveCooledDownCards() {
+    if (cardPlayService == null) {
       return;
+    }
+    List<String> retrieved = cardPlayService.onPlayerRoundStart();
+    if (retrieved.isEmpty()) {
+      return;
+    }
+    narrate(
+        retrieved.size() == 1
+            ? "A card cooled down and returned to your hand."
+            : retrieved.size() + " cards cooled down and returned to your hand.");
+    eventHandler.trigger(HAND_CHANGED_EVENT, cardPlayService.currentHand());
+  }
+
+  private void enterPlayerTurn() {
+    // Enable or accept player actions.
+    this.queueBattleOutcomeIfOver();
+    // wait for ui to submit card or end turn
+  }
+
+  private void enterPlayerEnd() {
+    // Coordinate end-of-turn operations.
+    if (this.queueBattleOutcomeIfOver()) {
+      return;
+    }
+    // Cards may have defeated the enemy selected during intent reveal. Start the enemy phase
+    // from the first survivor rather than executing that stale selection.
+    resetEnemyCursor();
+    if (advanceToNextLivingEnemy()) {
+      setEnemyIntent(resolveEnemyIntent(getActiveEnemy()));
     }
 
     CombatStatsComponent playerStats = this.player.getComponent(CombatStatsComponent.class);
@@ -880,27 +765,27 @@ public class BattleController {
     }
   }
 
-  private void enterPlayerResolved() {
-    // Check battle outcome before allowing another action.
-    if (this.isBattleOver()) {
-      return;
-    }
-    handle(BattleEvent.PLAYER_CONTINUES);
-  }
-
   private void enterEnemyTurn() {
+    Entity enemy = getActiveEnemy();
+
+    if (skipEnemyTurnIfDead(enemy)) return;
+
+    /* ADD POISON DAMAGE HERE */
+
+    if (skipEnemyTurnIfDead(enemy)) return;
+
     // Begin the current enemy's action.
-    if (currentEnemyIntent.getType() == IntentType.ATTACK) {
-      handle(BattleEvent.ENEMY_ATTACK_SELECTED);
-    } else if (currentEnemyIntent.getType() == IntentType.DEFEND) {
-      handle(BattleEvent.ENEMY_DEFEND_SELECTED);
-    } else {
-      handle(BattleEvent.ENEMY_OTHER_SELECTED);
-    }
+    BattleEvent event =
+        switch (currentEnemyIntent.getType()) {
+          case ATTACK -> BattleEvent.ENEMY_ATTACK_SELECTED;
+          case DEFEND -> BattleEvent.ENEMY_DEFEND_SELECTED;
+          default -> BattleEvent.ENEMY_OTHER_SELECTED;
+        };
+    handle(event);
   }
 
   private void enterEnemyAttack() {
-    Entity enemy = getEnemy();
+    Entity enemy = getActiveEnemy();
 
     // Team 1's executeIntent now applies the hit to the player's CombatStatsComponent itself, so
     // the controller no longer re-applies the damage. Read the player's HP either side of the call
@@ -923,7 +808,7 @@ public class BattleController {
   }
 
   private void enterEnemyDefend() {
-    Entity enemy = getEnemy();
+    Entity enemy = getActiveEnemy();
 
     EnemyBehaviourComponent behaviour = enemy.getComponent(EnemyBehaviourComponent.class);
     if (behaviour != null) {
@@ -934,7 +819,7 @@ public class BattleController {
   }
 
   private void enterEnemyOther() {
-    Entity enemy = getEnemy();
+    Entity enemy = getActiveEnemy();
 
     EnemyBehaviourComponent behaviour = enemy.getComponent(EnemyBehaviourComponent.class);
     if (behaviour != null) {
@@ -946,30 +831,30 @@ public class BattleController {
 
   private void enterEnemyResolved() {
     // If the battle is over, abort and head straight to ending
-    if (this.isBattleOver()) {
+    if (this.queueBattleOutcomeIfOver()) {
       return;
     }
 
     // If another enemy is successfully targeted.
-    if (this.targetNextEnemy()) {
-      this.setEnemyIntent(resolveEnemyIntent(this.getEnemy()));
+    if (this.advanceToNextLivingEnemy()) {
+      this.setEnemyIntent(resolveEnemyIntent(this.getActiveEnemy()));
       handle(BattleEvent.MORE_ENEMIES);
       return;
     }
 
-    this.cleanUp();
+    this.resetEnemyCursor();
     handle(BattleEvent.ENEMY_PHASE_COMPLETE);
   }
 
   private void enterVictory() {
-    this.cleanUp();
+    this.resetEnemyCursor();
     clearTimedHealing();
     narrate("Victory! Every enemy has been defeated.");
     eventHandler.trigger(BATTLE_ENDED_EVENT, Boolean.TRUE);
   }
 
   private void enterDefeat() {
-    this.cleanUp();
+    this.resetEnemyCursor();
     clearTimedHealing();
     narrate("Defeat. The player has fallen.");
     eventHandler.trigger(BATTLE_ENDED_EVENT, Boolean.FALSE);
